# Game

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE
sfml/include/SFML/Graphics/: Transformable.hpp
src/: common.h
src/client/: Base.h  CMakeLists.txt  Hero.cpp  Hero.h  RangeHit.cpp  RangeHit.h  client.cpp  client.h  globalFunctions.cpp  globalFunctions.h  main.cpp  overloads.cpp  overloads.h  settings.h  view.h
src/client/core/: assets.cpp  assets.h  field.cpp  field.h  view.h
src/client/encryption/: map_encryption.cpp  map_encryption.h
src/client/heroes/: Base.h  Blizzard.h  FrostWave.cpp  FrostWave.h  Hero.cpp  Hero.h  IceSpikes.cpp  IceSpikes.h  RangeHit.cpp  RangeHit.h  circleShape.cpp  circleShape.h  rectangleShape.cpp
src/client/map/: hexagon.cpp  hexagon.h  map.cpp  map.h  positions.h  tree.cpp
src/client/menu/: authorizationMenu.cpp  authorizationMenu.h  awaitingMenu.cpp  awaitingMenu.h  controller.cpp  controller.h  createjoinMenu.cpp  createjoinMenu.h  friendEntry.cpp  friendEntry.h  friendsMenu.cpp  friendsMenu.h  gameController.cpp  gameController.h  gameScreen.cpp  gameScreen.h  invitationMenu.cpp  invitationMenu.h  lobbyMenu.cpp  lobbyMenu.h  mainMenu.cpp  mainMenu.h  menu.cpp  menu.h  menuButton.cpp  menuButton.h  menuManager.cpp  menuManager.h  quickplayMenu.cpp  quickplayMenu.h  registrationMenu.cpp  registrationMenu.h  startMenu.cpp  startMenu.h  statisticsMenu.cpp  statisticsMenu.h  textField.cpp  textField.h
src/client/utils/: globalFunctions.h  overloads.cpp  overloads.h  pathChanger.cpp  pathChanger.h  settings.h
src/server/: CMakeLists.txt  main.cpp  players.txt  server.cpp  server.h
src/server/contreller/: controller.cpp  controller.h
src/server/controller/: controller.cpp  controller.h
src/server/dataBase/: playerDatabase.cpp  playerDatabase.h
src/server/encryption/: map_encryption.h
src/server/game/core/: field.cpp  field.h
src/server/game/core/encryption/: map_encryption.cpp
src/server/game/heroes/: Blizzard.cpp  Blizzard.h  FrostWave.cpp  FrostWave.h  Hero.cpp  Hero.h  IceSpikes.cpp  IceSpikes.h  RangeHit.cpp  RangeHit.h  rectangleShape.h
src/server/game/map/: hexagon.cpp  hexagon.h  map.cpp  map.h  positions.cpp  tree.h
src/server/game/utils/: globalFunctions.cpp  globalFunctions.h  secondOrderDynamics.h  settings.h
src/server/gameLobby/: gameLobby.cpp  gameLobby.h  quickGame.cpp  quickGame.h  utils.cpp
src/server/network/: server.cpp  server.h
